--- a/redirect/whatsapp.html
+++ b/redirect/whatsapp.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="refresh" content="5;url=https://wa.me/+77086271443">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>САПСАН ФИРМА - Перенаправление</title>
-    <meta name="description" content="📨Контактные данные - Охрименко Сергея Владимировича. 📞Телефон: +7 (708) 627-1443. Перенаправление на сайт/мобильное приложение - WhatsApp">
+    <title>redirect</title>
+    <meta name="description" content="Перенаправление на сайт/мобильное приложение - WhatsApp">
     <link rel="apple-touch-icon" sizes="180x180" href="../image/main/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="../image/main/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="../image/main/favicon/favicon-16x16.png">
